<resources>
    <string name="app_name">ВПоиске</string>

    <string name="text_authorization">Авторизация</string>
    <string name="text_authorization_required">Необходимо авторизоваться</string>
    <string name="text_wrong_login_or_password">Указан неверный логин или пароль!</string>
    <string name="text_enter">Войти</string>
    <string name="text_email_or_phone">Email или телефон</string>
    <string name="text_password">Пароль</string>

    <string name="navigation_view_header_title">Поиски</string>
    <string name="main_title">Последний поиск</string>
    <string name="text_no_searches">Поиски отсутствуют</string>
    <string name="text_start_new_search">Начать новый поиск</string>
    <string name="search_params_title">Новый поиск</string>
    <string name="search_list_title">История поисков</string>
    <string name="change_theme_title">Сменить тему</string>
    <string name="user_list_title">Люди</string>
    <string name="search_title">Поиск</string>

    <string name="text_search_params">Параметры поиска</string>
    <string name="text_reset">Сбросить</string>
    <string name="text_country_and_city">Страна и город</string>
    <string name="text_sex">Пол</string>
    <string name="text_age">Возраст</string>
    <string name="text_relation">Семейное положение</string>
    <string name="text_with_phone_only">Только с телефоном</string>
    <string name="text_how_many_users_to_find">Сколько людей найти?</string>
    <string name="text_was_online">Были в сети в течение дней:</string>
    <string name="text_limit_friends_count">Ограничить количество друзей</string>
    <string name="text_limit_followers_count">Ограничить количество подписчиков</string>
    <string name="text_to">до %s</string>
    <string name="text_from_to">от %s до %s</string>
    <string name="text_start_search">Начать поиск</string>
    <string name="text_delete">Удалить</string>
    <string name="item_change_view">Сменить вид</string>

    <string name="description_user_image">Изображение пользователя</string>

    <string name="error_something_went_wrong">Что-то пошло не так. Попробуйте повторить позднее</string>
    <string name="error_check_internet">Нет соединения с интернетом, пожалуйста, проверьте ваше подключение</string>
    <string name="error_check_internet_or_unavailable">Ошибка соединения: отсутствует подключение к сети или сервер недоступен</string>

    <string name="channel_description">Уведомления приложения ВПоиске</string>

    <string-array name="ages_from">
        <item>От любого</item>
        <item>от 14</item>
        <item>от 15</item>
        <item>от 16</item>
        <item>от 17</item>
        <item>от 18</item>
        <item>от 19</item>
        <item>от 20</item>
        <item>от 21</item>
        <item>от 22</item>
        <item>от 23</item>
        <item>от 24</item>
        <item>от 25</item>
        <item>от 26</item>
        <item>от 27</item>
        <item>от 28</item>
        <item>от 29</item>
        <item>от 30</item>
        <item>от 31</item>
        <item>от 32</item>
        <item>от 33</item>
        <item>от 34</item>
        <item>от 35</item>
        <item>от 36</item>
        <item>от 37</item>
        <item>от 38</item>
        <item>от 39</item>
        <item>от 40</item>
        <item>от 41</item>
        <item>от 42</item>
        <item>от 43</item>
        <item>от 44</item>
        <item>от 45</item>
        <item>от 46</item>
        <item>от 47</item>
        <item>от 48</item>
        <item>от 49</item>
        <item>от 50</item>
    </string-array>

    <string-array name="ages_to">
        <item>До любого</item>
        <item>до 14</item>
        <item>до 15</item>
        <item>до 16</item>
        <item>до 17</item>
        <item>до 18</item>
        <item>до 19</item>
        <item>до 20</item>
        <item>до 21</item>
        <item>до 22</item>
        <item>до 23</item>
        <item>до 24</item>
        <item>до 25</item>
        <item>до 26</item>
        <item>до 27</item>
        <item>до 28</item>
        <item>до 29</item>
        <item>до 30</item>
        <item>до 31</item>
        <item>до 32</item>
        <item>до 33</item>
        <item>до 34</item>
        <item>до 35</item>
        <item>до 36</item>
        <item>до 37</item>
        <item>до 38</item>
        <item>до 39</item>
        <item>до 40</item>
        <item>до 41</item>
        <item>до 42</item>
        <item>до 43</item>
        <item>до 44</item>
        <item>до 45</item>
        <item>до 46</item>
        <item>до 47</item>
        <item>до 48</item>
        <item>до 49</item>
        <item>до 50</item>
    </string-array>
</resources>
