<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.egorshustov.vpoiske.util.ConstantsKt" />

        <variable
            name="viewmodel"
            type="com.egorshustov.vpoiske.searchparams.SearchParamsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?themeBackgroundColorSecondary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/layout_search_params"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/fragment_padding"
                android:paddingEnd="@dimen/fragment_padding"
                android:paddingBottom="@dimen/fragment_padding">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_blocks">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_search_params"
                        android:textColor="?themeTextColorPrimary"
                        android:textSize="@dimen/text_size_big"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_reset"
                        android:textColor="?themeColorAccent"
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:text="@string/text_country_and_city"
                    android:textColor="?themeTextColorSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_countries"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:countries="@{viewmodel.countries}"
                        app:selectedCountry="@={viewmodel.currentCountry}" />

                    <Spinner
                        android:id="@+id/spinner_cities"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cities="@{viewmodel.cities}"
                        app:selectedCity="@={viewmodel.currentCity}" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:text="@string/text_age"
                    android:textColor="?themeTextColorSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_age_from"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spinner_age_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:text="@string/text_relation"
                    android:textColor="?themeTextColorSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <Spinner
                    android:id="@+id/spinner_relation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks" />

                <CheckBox
                    android:id="@+id/check_with_phone_only"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:checked="@{viewmodel.currentWithPhoneOnly}"
                    android:text="@string/text_with_phone_only"
                    android:textColor="?themeTextColorSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_how_many_users_to_find"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_blocks"
                        android:text="@{viewmodel.currentFoundUsersLimit.toString()}"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seek_founded_users_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:max="99"
                    android:progress="9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_was_online"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_blocks"
                        android:text="@{viewmodel.currentDaysInterval.toString()}"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seek_days_interval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:max="29"
                    android:progress="2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_set_friends_limits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text_limit_friends_count"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@{@string/text_from_to(viewmodel.defaultFriendsMinCount, viewmodel.currentFriendsMaxCount.toString())}"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"
                        android:visibility="@{viewmodel.currentFriendsMaxCount == null ? View.GONE : View.VISIBLE}" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seek_friends_max_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:max="1000"
                    android:progress="250"
                    android:visibility="@{viewmodel.currentFriendsMaxCount == null ? View.GONE : View.VISIBLE}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_limit_followers_count"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@{@string/text_from_to(0, viewmodel.currentFollowersMaxCount.toString())}"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"
                        android:visibility="@{viewmodel.currentFollowersMaxCount == null ? View.GONE : View.VISIBLE}" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seek_followers_max_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:max="1000"
                    android:progress="150" />

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_blocks"
                    android:text="@string/text_start_search"
                    android:visibility="@{(viewmodel.currentCity != ConstantsKt.DEFAULT_CITY_TITLE &amp;&amp; viewmodel.currentCountry.peekContent() != ConstantsKt.DEFAULT_COUNTRY_TITLE) ? View.VISIBLE : View.GONE}"
                    app:backgroundTint="?themeColorAccent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>