<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.egorshustov.vpoiske.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?themeBackgroundColorPrimary"
        android:paddingStart="@dimen/fragment_padding"
        android:paddingEnd="@dimen/fragment_padding">

        <WebView
            android:id="@+id/web_view_auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:id="@+id/edit_login"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!viewmodel.isRequestProcessing}"
                android:hint="@string/text_email_or_phone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={viewmodel.loginText}" />

            <EditText
                android:id="@+id/edit_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/blocks_margin"
                android:enabled="@{!viewmodel.isRequestProcessing}"
                android:hint="@string/text_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={viewmodel.passwordText}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_auth"
                style="@style/ButtonPrimaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:enabled="@{!viewmodel.isRequestProcessing &amp;&amp; viewmodel.areCredentialsValid}"
                android:text="@string/text_enter" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_auth"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isGone="@{!viewmodel.isRequestProcessing}"
            app:layout_constraintBottom_toBottomOf="@+id/layout_input"
            app:layout_constraintEnd_toEndOf="@+id/layout_input"
            app:layout_constraintStart_toStartOf="@+id/layout_input"
            app:layout_constraintTop_toTopOf="@+id/layout_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>